mockup/output.txt
test.c: In function ‘main’:
test.c:4:30: error: expected ‘;’ before ‘return’
    4 |     printf("Hello, world!\n")
      |                              ^
      |                              ;
    5 |     return 0;
      |     ~~~~~~                    
Hello, world!
